--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                 <h2>Projects</h2>
                 <div class="projetos-grid">
                     <div class="projeto-card">
-                        <img src="img/projeto1.jpeg" alt="Projeto 1">
+                        <img src="img/im_projeto1.jpeg" alt="Projeto 1">
                         <div class="projeto-info">
                             <h3>Regression Analysis of Soybean Yield</h3>
                             <p> The aim of this study is to perform a multiple linear regression analysis to estimate soybean yield (kg/ha) based on the main factors that influence it.
                                 The analysis will be divided into four main stages: descriptive analysis, model fitting, influence diagnostics, and testing of model assumptions.</p>
-                            <a href="#" class="https://rpubs.com/Arthur_Hintz/soybean_regression">Project </a>
+                            <a href="https://rpubs.com/Arthur_Hintz/soybean_regression" class="projeto-link">Project </a>
                         </div>
                     </div>
                     
