--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <h2>Projects</h2>
                 <div class="projetos-grid">
                     <div class="projeto-card">
-                        <img src="img/im_projeto1.jpeg" alt="Projeto 1">
+                        <img src="img/im_projeto1.jpg" alt="Projeto 1">
                         <div class="projeto-info">
                             <h3>Regression Analysis of Soybean Yield</h3>
                             <p> The aim of this study is to perform a multiple linear regression analysis to estimate soybean yield (kg/ha) based on the main factors that influence it.
@@ -177,7 +177,7 @@
                     </div>
                     
                     <div class="projeto-card">
-                        <img src="img/projeto3.jpeg" alt="Projeto 3">
+                        <img src="img/projeto3.jpg" alt="Projeto 3">
                         <div class="projeto-info">
                             <h3>projeto 3</h3>
                             <p>Sobre o projeto 3.</p>
