--- a/index.html
+++ b/index.html
@@ -168,11 +168,14 @@
                     </div>
                     
                     <div class="projeto-card">
-                        <img src="img/projeto2.jpeg" alt="Projeto 2">
+                        <img src="img/im_projeto2.jpeg" alt="Projeto 2">
                         <div class="projeto-info">
-                            <h3>Projeto 2</h3>
-                            <p>Sobre o projeto 2.</p>
-                            <a href="#" class="projeto-link">Ver Projeto</a>
+                            <h3>Time Serie</h3>
+                            <p>This report aims to analyze the time series of average wind speed recorded in Brasília, using monthly data from meteorological station 83377,
+                                covering the period from January 2001 to December 2018. The analysis seeks to identify seasonal patterns,
+                                trends, and potential changes over time through the application of statistical and graphical techniques.
+                                Wind speed plays an important role in the local climate, influenced by the region's high altitude and distinct rainy and dry seasons.</p>
+                            <a href="https://rpubs.com/Arthur_Hintz/time_series" class="projeto-link">Project</a>
                         </div>
                     </div>
                     
