--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
                     
                     <div class="projeto-card">
-                        <img src="img/im_projeto2.jpeg" alt="Projeto 2">
+                        <img src="img/im_projeto2.jpg" alt="Projeto 2">
                         <div class="projeto-info">
                             <h3>Time Serie</h3>
                             <p>This report aims to analyze the time series of average wind speed recorded in Brasília, using monthly data from meteorological station 83377,
